remove homework7 from build

--- a/COMP511/build.gradle
+++ b/COMP511/build.gradle
@@ -18,3 +18,16 @@ test {
 		events "passed", "skipped", "failed"
 	}
 }
+
+sourceSets {
+    main {
+        java {
+            exclude '**/homework7/*.java'
+        }
+    }
+    test {
+        java {
+            exclude '**/homework7/*.java'
+        }
+    }
+}
